--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="C:\Users\DELL\projects\code.css">
 </head>
 <body>
+    <p>are you oky </p>
     <div> this is my project file</div>
 <script src="C:\Users\DELL\projects\node.js"> </script>
 </body>
