i changed the innertext of the div Element

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>logo</h1>
     <p>are you oky </p>
-    <div> this is my project file</div>
+    <div> this is my new branch</div>
 <script src="C:\Users\DELL\projects\node.js"> </script>
 </body>
 </html>
